--- a/public/js/app/tpl/workspace.html
+++ b/public/js/app/tpl/workspace.html
@@ -1,3 +1,37 @@
-<div>
-	<h1>This is the workspace View</h1>
+<div class="row">
+
+	<div class="col-md-4">
+		<h1>This is the workspace View</h1>
+	</div>
+	<div class="col-md-4">
+		
+		<table class="table">
+			<tr>
+				<th>Amount</th>
+				<th>Desc</th>
+			</tr>
+			<tr>
+				<td>1,0</td>
+				<td>bla bla bla</td>
+			</tr>
+		</table>
+	</div>
+	<div class="col-md-4">
+
+		<div class="panel panel-default">
+		  <div class="panel-heading">Your Projects</div>
+		  <div class="panel-body">
+
+		</div>
+		  
+		<!-- List group -->
+		<ul class="list-group">
+			<li class="list-group-item"><a href="#project/1">Project 1</a></li>
+			<li class="list-group-item"><a href="#project/2">Project 2</a></li>
+			<li class="list-group-item"><a href="#project/3">Project 3</a></li>
+		</ul>
+
+		
+	</div>
+	
 </div>
