task: using backbone.js models and collections.

--- a/public/js/app/tpl/workspace.html
+++ b/public/js/app/tpl/workspace.html
@@ -19,19 +19,21 @@
 	<div class="col-md-4">
 
 		<div class="panel panel-default">
-		  <div class="panel-heading">Your Projects</div>
-		  <div class="panel-body">
+			<div class="panel-heading">Your Projects</div>
+			<div class="panel-body">
 
-		</div>
-		  
-		<!-- List group -->
-		<ul class="list-group">
-			<li class="list-group-item"><a href="#project/1">Project 1</a></li>
-			<li class="list-group-item"><a href="#project/2">Project 2</a></li>
-			<li class="list-group-item"><a href="#project/3">Project 3</a></li>
-		</ul>
+				<!-- List group -->
+				<ul id="projectlist" class="list-group">
+					{{!-- 			
+					<li class="list-group-item"><a href="#project/1">Project 1</a></li>
+					<li class="list-group-item"><a href="#project/2">Project 2</a></li>
+					<li class="list-group-item"><a href="#project/3">Project 3</a></li> 
+					--}}
+				</ul>
 
+			</div>
 		
+		</div>
 	</div>
 	
 </div>
