--- a/public/js/app/tpl/workspace.html
+++ b/public/js/app/tpl/workspace.html
@@ -20,18 +20,17 @@
 
 		<div class="panel panel-default">
 			<div class="panel-heading">Your Projects</div>
-			<div class="panel-body">
 
-				<!-- List group -->
-				<ul id="projectlist" class="list-group">
-					{{!-- 			
-					<li class="list-group-item"><a href="#project/1">Project 1</a></li>
-					<li class="list-group-item"><a href="#project/2">Project 2</a></li>
-					<li class="list-group-item"><a href="#project/3">Project 3</a></li> 
-					--}}
-				</ul>
+			<!-- <div class="panel-body"></div> -->
 
-			</div>
+			<!-- List group -->
+			<ul id="projectlist" class="list-group">
+				{{!-- 			
+				<li class="list-group-item"><a href="#project/1">Project 1</a></li>
+				<li class="list-group-item"><a href="#project/2">Project 2</a></li>
+				<li class="list-group-item"><a href="#project/3">Project 3</a></li> 
+				--}}
+			</ul>
 		
 		</div>
 	</div>
