--- a/public/js/app/tpl/project.html
+++ b/public/js/app/tpl/project.html
@@ -1,3 +1,53 @@
-<div>
-	<h1>This is the project View</h1>
+<div class="row">
+
+	<div class="col-md-9">
+		
+		<table class="table">
+			<tr>
+				<th>A</th>
+				<th>B</th>
+				<th>C</th>
+			</tr>
+
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+
+		</table>
+
+	</div>
+
+	<div class="col-md-3">
+		<div>
+			<h1>This is the project View for {{name}}. </h1>
+		</div>
+	</div>
 </div>
+
